--- a/modulo4/lista-typescript/package.json
+++ b/modulo4/lista-typescript/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./build/exercicio1.js"
+    "start1": "tsc && node ./build/exercicio1.js",
+    "start2": "tsc && node ./build/exercicio2.js"
   },
   "keywords": [],
   "author": "",
