--- a/modulo4/lista-typescript/package.json
+++ b/modulo4/lista-typescript/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start1": "tsc && node ./build/exercicio1.js",
-    "start2": "tsc && node ./build/exercicio2.js"
+    "start2": "tsc && node ./build/exercicio2.js",
+    "start3": "tsc && node ./build/exercicio3.js"
   },
   "keywords": [],
   "author": "",
