--- a/modulo4/lista-typescript/package.json
+++ b/modulo4/lista-typescript/package.json
@@ -12,7 +12,8 @@
     "start2": "tsc && node ./build/exercicio2.js",
     "start3": "tsc && node ./build/exercicio3.js",
     "start4": "tsc && node ./build/exercicio4.js",
-    "start5": "tsc && node ./build/exercicio5.js"
+    "start5": "tsc && node ./build/exercicio5.js",
+    "start6": "tsc && node ./build/exercicio6.js"
   },
   "keywords": [],
   "author": "",
