--- a/modulo4/async-await-promises/package.json
+++ b/modulo4/async-await-promises/package.json
@@ -1,22 +1,20 @@
 {
   "name": "async-await-promises",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ex1": "tsc && node build/ex1.js",
+    "ex2": "tsc && node build/ex2.js",
+    "ex3": "tsc && node build/ex3.js",
+    "ex4": "tsc && node build/ex4.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Labenu",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "axios": "^0.20.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13"
+    "typescript": "^4.0.2",
+    "@types/axios": "^0.14.0"
   }
 }
