--- a/modulo4/servicos-backend/package.json
+++ b/modulo4/servicos-backend/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/knex": "^0.16.1",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
